fix: remove pointer events on exercise dropdown when not visible

--- a/src/components/CreateWorkout/ExerciseSelectorDropdown/ExerciseSelectorDropdown.scss
+++ b/src/components/CreateWorkout/ExerciseSelectorDropdown/ExerciseSelectorDropdown.scss
@@ -66,6 +66,7 @@
   top: 100%;
   visibility: 0;
   opacity: 0;
+  pointer-events: none;
   z-index: -1;
   width: 100%;
   height: fit-content;
@@ -142,4 +143,5 @@
   visibility: 1;
   margin-top: 0.5rem;
   z-index: 5;
+  pointer-events: all;
 }
